fix text overflowing

--- a/src/components/TodoCard/TodoCard.module.css
+++ b/src/components/TodoCard/TodoCard.module.css
@@ -25,11 +25,10 @@
 
 .sectionWrapper {
   --group-gap: 0;
-  --group-align: stretch;
-  --group-wrap: nowrap;
 
   cursor: pointer;
   width: 100%;
+  overflow: auto;
 }
 
 .middleSection {
@@ -39,6 +38,7 @@
 
   flex-grow: 1;
   user-select: none;
+  min-width: 0;
 
   padding-right: var(--mantine-spacing-xs);
   padding-left: var(--mantine-spacing-xs);
@@ -46,6 +46,13 @@
   @media (max-width: $mantine-breakpoint-xs) {
     --text-fz: var(--mantine-font-size-sm);
   }
+}
+
+.middleSection p {
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 [data-checked="true"] .middleSection {
